--- a/TascaM4T02.ipynb
+++ b/TascaM4T02.ipynb
@@ -945,6 +945,7 @@
        ],
        "layout": {
         "autosize": false,
+        "dragmode": "pan",
         "height": 300,
         "hovermode": "closest",
         "legend": {
@@ -1929,6 +1930,14 @@
     "fig.update_layout(autosize=False, width=1050, height=300, hovermode='closest')\n",
     "fig.update_yaxes(showticklabels=False, showgrid=False, zeroline=False, visible=False)\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efdbc8c9-639b-4289-8d29-fad536d9e3b3",
+   "metadata": {},
+   "source": [
+    "![BubbleChart](newplot.png)"
    ]
   }
  ],
